# inventory

./: config.toml  inventory.docx  inventory.py  inventory_fn.py  main.py  models.py  pyproject.toml  shop.db  shop.py  shopping.py  test.py  ui.py
